# Quacks

./: .gitignore  .gitmodules  CMakeLists.txt
src/: CMakeLists.txt
toolchain/android/: qtdeploy.json.in
toolchain/iOS/: iOS.cmake
